assignment5/.metadata/.plugins/org.eclipse.cdt.ui/assign5Q2.build.log
21:07:14 **** Incremental Build of configuration Debug for project assign5Q2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'SystemClock_Config':
../Core/Src/main.c:120:46: error: stray '`' in program
  120 |   RCC_ClkInitTypeDef RCC_ClkInitStruct = {0};`
      |                                              ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:07:14 Build Failed. 2 errors, 0 warnings. (took 582ms)

